k8s/artisan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --volumes hostPath
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: artisan
  name: artisan
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: artisan
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml --volumes hostPath
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: artisan
    spec:
      containers:
      - command:
        - php
        - /var/www/html/artisan
        image: artisan
        imagePullPolicy: ""
        name: artisan-psi
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html
          name: artisan-hostpath0
        workingDir: /var/www/html
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - hostPath:
          path: /home/luiz/PhpstormProjects/psi-bot
        name: artisan-hostpath0
status: {}
