k8s/npm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --volumes hostPath
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: npm
  name: npm
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: npm
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml --volumes hostPath
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: npm
    spec:
      containers:
      - command:
        - npm
        image: node:13.7
        imagePullPolicy: ""
        name: npm-psi
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html
          name: npm-hostpath0
        workingDir: /var/www/html
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - hostPath:
          path: /home/luiz/PhpstormProjects/psi-bot
        name: npm-hostpath0
status: {}
